UPDATE: Implementend gallery

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "astro": "^5.16.4",
+    "astro": "^5.16.9",
     "framer-motion": "^12.23.25",
     "photoswipe": "^5.4.4",
+    "photoswipe-dynamic-caption-plugin": "^1.2.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
